# RoboCup_Striker2

./: .gitignore  LICENSE  README.md
APDS9960-driver/main/: apds9960_defs.h  apds9960_lib.c  apds9960_lib.h  main.c
Drivers/APDS9960-driver/main/: CMakeLists.txt  apds9960_defs.h  apds9960_lib.c  main.c
Drivers/VL6180X-driver/: CMakeLists.txt  README.md
Drivers/VL6180X-driver/main/: CMakeLists.txt  i2c_vl6180x_main.c
Robot-Control/: CMakeLists.txt  README.md  sdkconfig
Robot-Control/components/control/: control.c  control.h  control_senfusion.c  senfusion.c  senfusion.h
Robot-Control/components/platform/: platform_esp32s3.c  platform_esp32s3.h  platform_wifi_esp32s3.c  platform_wifi_esp32s3.h
Robot-Control/include/: functions.h  tasks.h  types.h
Robot-Control/main/: CMakeLists.txt  functions.c  main.c  tasks.c
Robot-Navigation/: README.md  sdkconfig
Robot-Navigation/include/: functions.h  tasks.h  types.h
Robot-Navigation/main/: functions.c  main.c  tasks.c
VL6180X-driver/components/: CMakeLists.txt
Velocity-Control/: partitions.csv  partitions.txt  sdkconfig
Velocity-Control/include/: functions.h  tasks.h  types.h
Velocity-Control/main/: CMakeLists.txt  VL53L1X.c  VL53L1X.h  as5600_defs.h  as5600_lib.c  as5600_lib.h  bldc_pwm.c  bldc_pwm.h  bno055.c  bno055.h  control_senfusion.c  functions.c  led.h  main.c  platform_esp32s3.c  platform_esp32s3.h  tasks.c  types.h  uart_console.c
server_test/: app.py  obj_def.py  robocup.py  trajectory_functions.py
server_test/templates/: index.html
udp_server/: app.py
udp_server/templates/: index.html
(+31 files in other folders)
